--- a/res/layout/grid_frag.xml
+++ b/res/layout/grid_frag.xml
@@ -4,22 +4,14 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     >
-
-  
-    
 	 <!-- android:id="@android:id/list"-->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-         >
-	
    		<GridView 
    		    
  		    android:layout_margin="15dp"
    		    android:background="@drawable/iap_bg_content"
 			android:id="@+id/grid_view"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			android:numColumns="3"
 			android:columnWidth="100dp"
 			android:horizontalSpacing="10dp"
@@ -35,4 +27,3 @@
 	 </LinearLayout>
 
 
-</LinearLayout>
