--- a/res/layout/inventory_list_holder.xml
+++ b/res/layout/inventory_list_holder.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="@drawable/bg"
     >
-	 <!-- android:id="@android:id/list"-->
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_below="@+id/title_dynamic">
-	      	<ListView
-       	   
-       	     android:id="@android:id/list"
-       	    android:layout_width="match_parent"
-       	    android:layout_height="wrap_content" 
-       	 >
+    	<ListView
+    	   android:background="@drawable/iap_bg_content"
+    	     android:id="@android:id/list"
+    	    android:layout_width="match_parent"
+    	    android:layout_height="match_parent" 
+    	    android:padding = "5dp"
+    	    android:layout_margin="15dp"
+    	 >
 			
 	</ListView>
-	 </RelativeLayout>
+	 
 	
 	      	 <ProgressBar
         android:id="@+id/progressBar"
@@ -29,5 +26,4 @@
         android:layout_above="@+id/btn_play"
         android:visibility="invisible"/>
 
-
-</LinearLayout>
+</RelativeLayout>
