Add Forgot Password

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -112,6 +112,15 @@
             android:text="Don't have an account?"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
+            <TextView
+                android:id="@+id/txt_forgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/txt_input_password"
+                android:layout_below="@+id/txt_input_password"
+                android:onClick="clickHandler"
+                android:text="forgot Password"
+                android:textColor="#ff0000" />
                   
           </RelativeLayout>
 
