--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -36,12 +36,12 @@
 
           <EditText
               android:layout_marginTop="10dp"
-              android:id="@+id/txt_input_email"
+              android:id="@+id/txt_input_userName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
-              android:hint="Email"
+              android:hint="Username"
               android:ems="10" >
           </EditText>
            <EditText
@@ -49,7 +49,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
-              android:layout_below="@id/txt_input_email"
+              android:layout_below="@id/txt_input_userName"
               android:inputType="textPassword"
               android:hint="Password"
               android:ems="10" >
@@ -121,6 +121,16 @@
                 android:onClick="clickHandler"
                 android:text="forgot Password"
                 android:textColor="#ff0000" />
+
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/txt_or"
+                android:layout_alignRight="@+id/txt_or"
+                android:layout_marginBottom="22dp" 
+                android:visibility="invisible"/>
                   
           </RelativeLayout>
 
