--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -129,6 +129,15 @@
               android:scaleType="fitCenter" 
               android:visibility="invisible"/>
 
+          <ProgressBar
+              android:id="@+id/progressBarBig"
+              style="?android:attr/progressBarStyleLarge"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerHorizontal="true"
+              android:layout_centerVertical="true"
+              android:visibility="invisible" />
+
       </RelativeLayout>
 
 </LinearLayout>
