--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -123,7 +123,7 @@
                 android:textColor="#ff0000" />
 
             <ProgressBar
-                android:id="@+id/progressBar1"
+                android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
