--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="@drawable/bg"
+    
     >
-	<RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_margin="5dp" >
         
-	    <TextView 
+	    <TextView
+	        android:layout_margin="5dp" 
 	        android:id="@+id/title_dynamic"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/title_dnamic_content"
 	        android:paddingTop="10dp"
+	        android:layout_gravity="center_horizontal"
 	        android:layout_centerHorizontal="true"
 	        />
 	 <!-- android:id="@android:id/list"-->
@@ -24,10 +23,11 @@
         android:layout_height="wrap_content" 
         android:layout_below="@+id/title_dynamic">
 	      	<ListView
-       	   
+       	   android:layout_margin="10dp" 
        	     android:id="@android:id/list"
+       	      android:background="@drawable/iap_bg_content"
        	    android:layout_width="match_parent"
-       	    android:layout_height="wrap_content" 
+       	    android:layout_height="match_parent" 
        	 >
 			
 	</ListView>
@@ -41,7 +41,6 @@
         android:layout_centerInParent="true"
         android:layout_above="@+id/btn_play"
         android:visibility="invisible"/>
-	 </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
