--- a/res/layout/radius_list.xml
+++ b/res/layout/radius_list.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10dp">
 
-    
-    
        
     <ImageView
         android:id="@+id/friend_img_contact"
