--- a/res/layout/main_activity_egg.xml
+++ b/res/layout/main_activity_egg.xml
@@ -112,15 +112,17 @@
          android:onClick="onClickHandler"
          android:src="@drawable/main_tab_dynamic_content" />
 
-     <Button
+     <ImageButton
          android:id="@+id/btn_RaiseEvent"
+         android:scaleType="fitCenter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
+         android:layout_alignLeft="@+id/btn_store"
+         android:layout_alignRight="@+id/btn_store"
          android:layout_below="@+id/btn_store"
-         android:layout_centerHorizontal="true"
          android:layout_marginTop="30dp"
-         android:onClick="onClickHandler"
          android:background="@android:color/transparent"
-         android:text="Raise Promotion" />
+         android:onClick="onClickHandler"
+         android:src="@drawable/showpromotion" />
 
 </RelativeLayout>
